syntax = "proto3";

import "google/protobuf/wrappers.proto";
option csharp_namespace = "Account.API";

package account;


message LoginRequest {
  google.protobuf.StringValue email = 1;
  google.protobuf.StringValue password = 2;
}

message LoginReply {
  int64 id = 1;
  string email = 2;
  google.protobuf.Int32Value Role = 3;
  bool noUser = 4;
}

message ChangePasswordRequest {
	int64 id = 1;
	google.protobuf.StringValue password = 2;
}

message RegistrationRequest {
  google.protobuf.StringValue email = 1;
  google.protobuf.StringValue password = 2;
  google.protobuf.Int32Value role = 3;
}
message Error {
	string propertyName = 1;
	string message = 2;
}
message Response {
bool IsSuccess = 1;
repeated Error errors = 2;
string message = 3;
}



service Login {
  rpc GetLoggedUser (LoginRequest) returns (LoginReply); 
}
service Register {
  rpc RegisterUser (RegistrationRequest) returns (Response); 
}
service PasswordChange {
  rpc ChangePassword (ChangePasswordRequest) returns (Response); 
}